...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/track_detail_activity_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/track_recording_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="?attr/actionBarSize">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/track_detail_activity_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
...
