...

        <com.google.android.material.search.SearchBar
            android:id="@+id/track_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            app:menu="@menu/track_list"
            app:navigationIcon="@drawable/ic_logo_color_24dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/track_list_search_view"
        android:layout_width="match_parent"
...
