...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_activity_bike_24dp" />

    <!-- Name -->
    <TextView
        android:id="@+id/track_list_item_name"
        style="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/track_list_item_date"
...
